# tracklib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  common.h  doxyfile  main.cpp  tracklib.h
cmake-modules/: FindOpenCV.cmake
demo/: Images.qrc  README.md  abstractplayer.cpp  abstractplayer.h  demo.pro  exportdialog.cpp  exportdialog.h  exportdialog.ui  frameplayer.cpp  frameplayer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  param.cpp  param.h  project.cpp  project.h  projectinfowidget.cpp  projectinfowidget.h  projectinfowidget.ui  projectwidget.cpp  projectwidget.h  projectwidget.ui  recentproject.cpp  recentproject.h  sourceform.cpp  sourceform.h  sourceform.ui  trackingtask.cpp  trackingtask.h  trackingtaskdialog.cpp  trackingtaskdialog.h  trackingtaskdialog.ui  videoplayer.cpp  videoplayer.h  welcomewidget.cpp  welcomewidget.h  welcomewidget.ui
documentation/: .gitignore
tl_backgroundsubtractors/: onlinebackgroundsubtractor.cpp  onlinebackgroundsubtractor.h
tl_core/: backgroundsubtractor.cpp  backgroundsubtractor.h  detector.cpp  detector.h  filter.cpp  filter.h  tracker.cpp  tracker.h
tl_detectors/: dummydetector.cpp  dummydetector.h  meanshiftdetector.cpp  meanshiftdetector.h  nodetector.cpp  nodetector.h  templatematchingdetector.cpp  templatematchingdetector.h
tl_filters/: kalmanfilter.cpp  kalmanfilter.h
tl_gpu/: templatematchingdetectorgpu.cpp  templatematchingdetectorgpu.h
tl_util/: color.cpp  color.h  conversions.cpp  conversions.h  geometry.cpp  geometry.h  opencv.cpp  opencv.h  similaritymeasures.cpp  similaritymeasures.h
